# MameUI

./: CMakeLists.txt  README.md
docs/: first_screenshot
src/: CMakeLists.txt
src/libraries/: CMakeLists.txt
src/libraries/mame_interface/: CMakeLists.txt  GameList.cpp  GameList.h  Settings.cpp  Settings.h
src/mui_frontend/: CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  SettingsWindow.cpp  SettingsWindow.h  SettingsWindow.ui
tests/: CMakeLists.txt
tests/gtest/: CMakeLists.txt
tests/unit/: CMakeLists.txt  GameListTests.cpp  GameListTests.h  SettingsTests.cpp  SettingsTests.h  sample_game_list.txt
